# MyMoneyCPPWeb

./: CMakeLists.txt  Currency.cpp  MyMoney.cpp  MyMoneyApp.cpp  README.md  Session.cpp  Session.h  User.h  Wallet.cpp  Wallet.h  mymoney.db  strings.xml  wt_config.xml
Code/: Currency.cpp  Currency.h  MyMoney.cpp  MyMoneyApp.h  Session.cpp  Session.h  Wallet.h
Code/Widgets/: CurrenciesListWidget.cpp  CurrenciesListWidget.h  CurrencyWidget.cpp  CurrencyWidget.h  MyMoneyWidget.cpp  MyMoneyWidget.h  WalletsListWidget.cpp  WalletsListWidget.h
Widgets/: CurrenciesListWidget.cpp  CurrenciesListWidget.h  MenuWidget.cpp  MenuWidget.h  MyMoneyWidget.cpp  MyMoneyWidget.h
css/: mymoney.css
